--- a/frontend/src/components/CardGrid.css
+++ b/frontend/src/components/CardGrid.css
@@ -1,3 +1,26 @@
+.locations-section {
+  padding-top: 1.2rem;
+}
+
+.section-title {
+  color: var(--text-color);
+  opacity: 0.85;
+  font-size: 1.75rem;
+  margin: 0 0;
+  position: relative;
+  display: inline-block;
+}
+
+.section-title::after {
+  content: '';
+  position: absolute;
+  left: -10%;
+  right: -10%;
+  bottom: -5px;
+  height: 2px;
+  background-color: var(--text-color);
+}
+
 .grid-container {
   position: relative;
   padding: 2rem;
@@ -31,6 +54,7 @@
   -webkit-overflow-scrolling: touch;
   scrollbar-width: none;
   -ms-overflow-style: none;
+  padding: 1rem 0;
 }
 
 .card-grid.mobile::-webkit-scrollbar {
@@ -131,8 +155,12 @@
 }
 
 @media (max-width: 767px) {
+  .locations-section {
+    padding-top: 1.2rem;
+  }
+
   .grid-container.mobile {
-    padding: 1rem 0rem 1rem 1rem;
+    padding: 1rem 0.5rem;
   }
 
   .grid-wrapper {
@@ -143,3 +171,4 @@
     display: none;
   }
 }
+
